...
      }
    #else
      Form {
        Section {
          PutioFormField(label: "Folder name", placeholder: "Folder name", text: $name)
          PutioFormField(
            label: "Receiver app ID",
            placeholder: "Required",
            text: $invalid,
            errorText: "Enter a receiver app ID."
          )
        } header: {
          GalleryTitle(page: .forms)
...
